[gd_scene load_steps=3 format=3 uid="uid://d2o05ytbeogcx"]

[ext_resource type="Script" path="res://source/actors/rooms/sound_trigger.gd" id="1_5xfuy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_khlmy"]
resource_local_to_scene = true

[node name="sound_trigger" type="Area3D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_5xfuy")

[node name="collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_khlmy")

[node name="sound_player_3d" type="AudioStreamPlayer3D" parent="."]
max_db = 6.0

[node name="sound_player" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
